# music-intelligence-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: how_rules_work.md
music/: daftpunk_features.json
rules/: interpretation_rules.json
scripts/: extract_features.py
src/: audio.py  config.py  features.py
src/audio_processing/: __init__.py  audio_loader.py  config.py  feature_extraction.py  rhythm_analysis.py  tone_color_interpreter.py
src/config/: __init__.py  interpretation_config.py
src/genre_analysis/: __init__.py
src/harmonic_analysis/: __init__.py
src/lyrics_analysis/: __init__.py
src/music_intelligence/: __init__.py
src/music_intelligence/config/: __init__.py  settings.py
src/music_intelligence/dsp/: __init__.py  audio_loader.py
src/music_intelligence/features/: __init__.py  basic_features.py  global_features.py
src/music_intelligence/utils/: __init__.py
src/rhythmic_analysis/: __init__.py  rhythm_interpreter.py
